ADD: HERO layout

--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
                 </div>
             </div>
         </header>
-        
+        <section class="hero bg-green">
+            <div class=" ">
+                <div class="row">
+                    <div class="col d-flex flex-column align-items-center"><img
+                            src="./img/avatar.svg"
+                            alt>
+                            <strong
+                            class="text-white fs-1 ">START
+                            BOOTSTRAP</strong></div> 
+                    </div>
+                </div>
+            </div>
+        </section>
         <main>
             <section class="portfolio"></section>
             <section class="about"></section>
